Closed
Bug 884934
Opened 9 years ago
Closed 9 years ago
Fix intermittent failure on SM(r) relating to InitialShapeSet::Ptr assertion
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: terrence, Assigned: terrence)
References
Details
Attachments
(1 file, 1 obsolete file)
1.22 KB,
patch
|
terrence
:
review+
|
Details | Diff | Splinter Review |
If the AddPtr gets poisoned, the table gets corrupted. We just need a skiproot here.
Attachment #764882 -
Flags: review?(sphink)
Assignee | ||
Comment 1•9 years ago
|
||
Setting r+ from sfink on irc.
Attachment #764882 -
Attachment is obsolete: true
Attachment #764882 -
Flags: review?(sphink)
Attachment #764883 -
Flags: review+
Assignee | ||
Comment 2•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/61b6312cfab2
Comment 3•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/61b6312cfab2
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•