Bug 884934 - Fix intermittent SM(r) failure on InitialShapeTable::Ptr; r=sfink

In EmptyShape::getInitialShape, the InitialShapeSet::AddPtr is not guarded and
will get poisoned by the analysis if the hash happens to look like a GC thing
pointer.